# open-webui_user_vs_global_tool_server

./: README  README.md  compose.yaml  fastmcp_server.py  pyproject.toml
compose/mcp_server/: Dockerfile
compose/mcp_to_openapi_proxy/: Dockerfile
