[project]
name = "open-webui-user-vs-global-tool-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Gwenn-LR",email = "gwennleroch29@hotmail.fr"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "fastmcp (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
